# clsimple

./: .gitlab-ci.yml  CMakeLists.txt  README.md  clsimple.hpp  test.cpp
src/: clsimple.hpp
tests/: example.cpp  test.cpp  utest.cpp
